Added link in the nav

--- a/main.html
+++ b/main.html
@@ -33,6 +33,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#dessert">nos desserts</a>
                 </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="./recetteamani.html">Les recettes d'Amani</a>
+              </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                     le meilleur de notre cuisine
