--- a/recetteamani.html
+++ b/recetteamani.html
@@ -22,16 +22,16 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">retour à la cuisine</a>
+                    <a class="nav-link active" aria-current="page" href="./main.html">retour à la cuisine</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#platprinc">nos plats principaux</a>
+                    <a class="nav-link" href="./main.html#platprinc">nos plats principaux</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#salade">nos salades</a>
+                    <a class="nav-link" href="./main.html#salade">nos salades</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#dessert">nos desserts</a>
+                    <a class="nav-link" href="./main.html#dessert">nos desserts</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="./recetteamani.html">Les recettes d'Amani</a>
