--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
     <title>livre de recettes Saoussan</title>
 </head>
 <body class="fw-light">
@@ -34,7 +34,7 @@
                     <a class="nav-link" href="#dessert">nos desserts</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="./recetteamani.html">Les recettes d'Amani</a>
+                  <a class="nav-link" href="./pages/recetteamani.html">Les recettes d'Amani</a>
               </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -93,7 +93,7 @@
             <div class="card-body">
               <h5 class="card-title">Les Falafels</h5>
               <p class="card-text">Le mot falafel pourrait venir du terme mlaff, signifiant « emballé », car on le mange souvent en sandwich.</p>
-              <a href="./falafel.html" class="btn btn-secondary">Fiche-recette</a>
+              <a href="../recettes/pages/falafel.html" class="btn btn-secondary">Fiche-recette</a>
             </div>
         </div>
         <div class="card border border-success border-2 " style="width: 18rem;">
@@ -101,7 +101,7 @@
             <div class="card-body">
               <h5 class="card-title">Le Tahini</h5>
               <p class="card-text">C’est la sauce que l’on trouve au proche orient, notamment en Palestine.</p>
-              <a href="./tahini.html" class="btn btn-secondary">Fiche-recette</a>
+              <a href="../recettes/pages/tahini.html" class="btn btn-secondary">Fiche-recette</a>
             </div>
         </div>
         <div class="card border border-success border-2 " style="width: 18rem;">
@@ -109,7 +109,7 @@
             <div class="card-body">
               <h5 class="card-title">Le Pain</h5>
               <p class="card-text">Les pains plats, en plus d'être assez simple à réaliser, sont d'excellents accompagnements à de nombreux plats et entrées.</p>
-              <a href="./pain.html" class="btn btn-secondary">Fiche-recette</a>
+              <a href="../recettes/pages/pain.html" class="btn btn-secondary">Fiche-recette</a>
             </div>
         </div>  
     </section>
@@ -119,7 +119,7 @@
             <div class="card-body">
               <h5 class="card-title">La Salade Falahiyeh</h5>
               <p class="card-text">Si tout ce que vous avez à la maison sont des tomates, des oignons et de la menthe, vous pouvez déguster cette succulente salade.</p>
-              <a href="./salade1.html" class="btn btn-secondary">Fiche-recette</a>
+              <a href="./pages/salade1.html" class="btn btn-secondary">Fiche-recette</a>
             </div>
         </div>
         <div class="card border border-dark border-2 " style="width: 18rem;">
@@ -127,7 +127,7 @@
             <div class="card-body">
               <h5 class="card-title">La Salade Aux Grenades</h5>
               <p class="card-text">Une succulente salade d'été aux huiles et épices de Palestine. </p>
-              <a href="./salade2.html" class="btn btn-secondary">Fiche-recette</a>
+              <a href="./pages/salade2.html" class="btn btn-secondary">Fiche-recette</a>
             </div>
         </div>
         <div class="card border border-dark border-2 " style="width: 18rem;">
@@ -135,7 +135,7 @@
             <div class="card-body">
               <h5 class="card-title">La Salade Mafghoussa</h5>
               <p class="card-text">Tahini aux aubergines rôties, les lentilles classiques avec du riz et des oignons caramélisés et une salade de courgettes crémeuse.</p>
-              <a href="./salade3.html" class="btn btn-secondary">Fiche-recette</a>
+              <a href="./pages/salade3.html" class="btn btn-secondary">Fiche-recette</a>
             </div>
         </div>  
     </section>
@@ -145,7 +145,7 @@
             <div class="card-body">
               <h5 class="card-title">Les Knafeh</h5>
               <p class="card-text">Le Knafeh est un dessert composé de couches de pâte croustillante et de fromage sucré.</p>
-              <a href="./dessert1.html" class="btn btn-secondary">Fiche-recette</a>
+              <a href="./pages/dessert1.html" class="btn btn-secondary">Fiche-recette</a>
             </div>
         </div>
         <div class="card border border-danger border-2 " style="width: 18rem;">
@@ -153,7 +153,7 @@
             <div class="card-body">
               <h5 class="card-title">Tamriyeh</h5>
               <p class="card-text">Dessert traditionnel composé d'un pudding de semoule sucré à la pistache.</p>
-              <a href="./dessert2.html" class="btn btn-secondary">Fiche-recette</a>
+              <a href="./pages/dessert2.html" class="btn btn-secondary">Fiche-recette</a>
             </div>
         </div>
         <div class="card border border-danger border-2 " style="width: 18rem;">
@@ -161,7 +161,7 @@
             <div class="card-body">
               <h5 class="card-title">La Basbousa</h5>
               <p class="card-text">Dessert très facilement réalisable à lz semoule de blé et au miel.</p>
-              <a href="./dessert3.html" class="btn btn-secondary">Fiche-recette</a>
+              <a href="./pages/dessert3.html" class="btn btn-secondary">Fiche-recette</a>
             </div>
         </div>  
     </section>
