--- a/pages/recetteamani.html
+++ b/pages/recetteamani.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="../styles/style.css">
     <title>livre de recettes Saoussan</title>
 </head>
 <body class="fw-light">
@@ -15,14 +15,14 @@
     <section>
         <nav class="navbar navbar-expand-lg bg-body-tertiary  text-capitalize">
             <div class="container-fluid">
-            <a class="navbar-brand ext-capitalize "  href="#">la gastronomie: l'art du bonheur</a>
+            <a class="navbar-brand ext-capitalize "  href="../index.html">la gastronomie: l'art du bonheur</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="./main.html">retour à la cuisine</a>
+                    <a class="nav-link active" aria-current="page" href="../index.html">retour à la cuisine</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="./main.html#platprinc">nos plats principaux</a>
