--- a/pages/recetteamani.html
+++ b/pages/recetteamani.html
@@ -72,7 +72,7 @@
             <div class="carousel-inner" role="listbox">
               <div class="carousel-item active">
                 <video class="video-fluid" loop autoplay muted>
-                    <source src="./assets/videos/6037344_Chef_Meat_3840x2160.mp4"  type="video/mp4" alt="chef assaisone de la viande">
+                    <source src="../assets/videos/6037344_Chef_Meat_3840x2160.mp4"  type="video/mp4" alt="chef assaisone de la viande">
                 </video>
                 <div class="carousel-caption d-none d-md-block">
                     <h4>Nos plats</h4>
@@ -82,7 +82,7 @@
         
               <div class="carousel-item">
                 <video class="video-fluid" loop autoplay muted>
-                    <source src="./assets/videos/mocktails.mp4" type="video/mp4" alt="mocktails succulent">
+                    <source src="../assets/videos/mocktails.mp4" type="video/mp4" alt="mocktails succulent">
                 </video>
                 <div class="carousel-caption d-none d-md-block">
                     <h4>Nos Mocktails</h4>
@@ -92,7 +92,7 @@
         
               <div class="carousel-item">
                 <video class="video-fluid" loop autoplay muted>
-                    <source src="./assets/videos/dessert.mp4" type="video/mp4" alt="coulis de chocolat versé sur des pancakes">
+                    <source src="../assets/videos/dessert.mp4" type="video/mp4" alt="coulis de chocolat versé sur des pancakes">
                 </video>
                 <div class="carousel-caption d-none d-md-block">
                     <h4>Nos Desserts</h4>
