--- a/index.html
+++ b/index.html
@@ -166,7 +166,9 @@
             </div>
         </div>  
     </section>
-
+    <div> 
+      <a href="https://amanib96.github.io/livre-recette-molengeek/index.html" role="button" class="btn btn-outline-dark m-5 text-align:center">Lien vers les bonnes recettes d'Amani</a>  
+    </div>
       <footer class="footer">
           <div class="container">
               <div class="row">
