--- a/index.html
+++ b/index.html
@@ -175,6 +175,13 @@
                   <div class="col-md-6">
                       <p>&copy; 2025 Recettes du Monde. Tous droits réservés.</p>
                   </div>
+                  <div>
+                    <form class="form" id="newsletter-form">
+                      <label for="email">Email</label>
+                      <input type="email" id="email" name="email" required>
+                      <button id="subscribe-btn">NEWSLETTER</button>
+                    </form>
+                  </div>
                   <div class="col-md-6">
                       <div class="footer-links">
                           <a href="https://www.facebook.com">Facebook</a>
